<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background_color"
            android:orientation="vertical"
            android:padding="@dimen/regular_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/regular_margin"
                android:src="@drawable/ic_error" />

            <TextView
                android:id="@+id/tvTitleErrorDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="@string/login_error"
                android:textAlignment="center"
                android:textColor="@color/grey_nav_icon"
                android:textSize="24dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvTextErrorDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/wrong_login_password"
                android:textAlignment="center"
                android:textColor="@color/grey_text"
                android:textSize="14dp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCloseErrorDialog"
                style="@style/activeButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular_margin"
                android:background="@drawable/selector_btn_blue"
                android:elevation="0dp"
                android:minHeight="60dp"
                android:outlineAmbientShadowColor="@color/blue"
                android:outlineSpotShadowColor="@color/blue"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@drawable/selector_btn_blue"
                android:textStyle="normal"
                app:cornerRadius="15dp"
                app:elevation="5dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>
