<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background_color"
                android:orientation="vertical"
                android:padding="@dimen/regular_margin">

                <TextView
                    android:id="@+id/tvIdTitlePaymentDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/regular_margin"
                    android:text="@string/id"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey_nav_icon"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvIdPaymentDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey_text"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    tools:text="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/payment_purpose"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey_nav_icon"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvTitlePaymentDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey_text"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    tools:text="Продукты" />

                <TextView
                    android:id="@+id/tvAmountTitlePaymentDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/amount"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey_nav_icon"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvAmountPaymentDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/blue"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:text="20000" />

                <TextView
                    android:id="@+id/tvDateTitlePaymentDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/date"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey_nav_icon"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvDatePaymentDialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/grey_text"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    tools:text="01.01.2024" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnClosePaymentDialog"
                    style="@style/activeButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/regular_margin"
                    android:background="@drawable/selector_btn_blue"
                    android:elevation="0dp"
                    android:minHeight="60dp"
                    android:outlineAmbientShadowColor="@color/blue"
                    android:outlineSpotShadowColor="@color/blue"
                    android:text="@string/close"
                    android:textAllCaps="false"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@drawable/selector_btn_blue"
                    android:textStyle="normal"
                    app:cornerRadius="15dp"
                    app:elevation="5dp" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</FrameLayout>
